unpackaged/main/default/objects/FPC_Address__c/FPC_Address__c.object-meta.xml
<CustomObject>
    <description>Address Table</description>
    <label>Address</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>