unpackaged/main/default/objects/FPC_Address__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <description>Street Address</description>
    <inlineHelpText>Enter Street Address</inlineHelpText>
    <label>Address 1</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>