unpackaged/main/default/objects/FPC_Address__c/fields/Address_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Address_City_State_Zip__c</fullName>
    <formula>TRIM( TRIM(Address_1__c &amp; " " &amp;  Address_2__c ) &amp; " " &amp;  TRIM(City__c  &amp; ", " &amp;  State__c &amp; "  " &amp;  Zip_Code__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address City State Zip</label>
    <type>Text</type>
</CustomField>