unpackaged/main/default/objects/FPC_Address__c/fields/Address_Number__c.field-meta.xml
<CustomField>
    <fullName>Address_Number__c</fullName>
    <label>Address Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>