unpackaged/main/default/objects/FPC_Address__c/fields/Address_Source__c.field-meta.xml
<CustomField>
    <fullName>Address_Source__c</fullName>
    <description>Where the address was obtained</description>
    <label>Address Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Report</fullName>
            </value>
            <value>
                <fullName>TLO</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Loan Address</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>