unpackaged/main/default/objects/FPC_Address__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>Annual Revenue for the location associated to the address.</description>
    <inlineHelpText>Annual Revenue for the location associated to the address.</inlineHelpText>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>