unpackaged/main/default/objects/FPC_Address__c/fields/CC_Transactions_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>CC_Transactions_Per_Month__c</fullName>
    <description>Number of Transactions per Month</description>
    <inlineHelpText>Enter the number of transactions processed by the customer per month.</inlineHelpText>
    <label>CC Transactions Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>