unpackaged/main/default/objects/FPC_Address__c/fields/CC_Volume_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>CC_Volume_Per_Month__c</fullName>
    <description>Total $ value of credit card transactions per month</description>
    <inlineHelpText>Enter the total $ value of credit card transactions per month.</inlineHelpText>
    <label>CC Volume Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>