unpackaged/main/default/objects/FPC_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City</description>
    <inlineHelpText>Enter City</inlineHelpText>
    <label>City</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>