unpackaged/main/default/objects/FPC_Address__c/fields/Date_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Established__c</fullName>
    <description>The date this location was established.</description>
    <inlineHelpText>The date this location was established.</inlineHelpText>
    <label>Date Established</label>
    <type>Date</type>
</CustomField>