unpackaged/main/default/objects/FPC_Address__c/fields/Date_Mail_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Mail_Returned__c</fullName>
    <description>Date that we received verification mail back “Return to Sender”</description>
    <label>Date Mail Returned</label>
    <type>Date</type>
</CustomField>