unpackaged/main/default/objects/FPC_Address__c/fields/Date_Served__c.field-meta.xml
<CustomField>
    <fullName>Date_Served__c</fullName>
    <description>Date that the messenger actually dropped off / served the lawsuit</description>
    <label>Date Served</label>
    <type>Date</type>
</CustomField>