unpackaged/main/default/objects/FPC_Address__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description or notes about the address.</description>
    <inlineHelpText>Description or notes about the address.</inlineHelpText>
    <label>Description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>