unpackaged/main/default/objects/FPC_Address__c/fields/External_id__c.field-meta.xml
<CustomField>
    <fullName>External_id__c</fullName>
    <displayFormat>AD-{000000}</displayFormat>
    <label>External id</label>
    <type>AutoNumber</type>
</CustomField>