unpackaged/main/default/objects/FPC_Address__c/fields/Facility_Company__c.field-meta.xml
<CustomField>
    <fullName>Facility_Company__c</fullName>
    <label>Facility Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>