unpackaged/main/default/objects/FPC_Address__c/fields/Facility_Fax__c.field-meta.xml
<CustomField>
    <fullName>Facility_Fax__c</fullName>
    <label>Facility Fax</label>
    <type>Phone</type>
</CustomField>