unpackaged/main/default/objects/FPC_Address__c/fields/Facility_Owned__c.field-meta.xml
<CustomField>
    <fullName>Facility_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facility Owned</label>
    <type>Checkbox</type>
</CustomField>