unpackaged/main/default/objects/FPC_Address__c/fields/Facility_Phone__c.field-meta.xml
<CustomField>
    <fullName>Facility_Phone__c</fullName>
    <label>Facility Phone</label>
    <type>Phone</type>
</CustomField>