unpackaged/main/default/objects/FPC_Address__c/fields/Facility_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Facility_Start_Date__c</fullName>
    <label>Facility Start Date</label>
    <type>Date</type>
</CustomField>