unpackaged/main/default/objects/FPC_Address__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>The fax number that corresponds to this address.</description>
    <inlineHelpText>The fax number that corresponds to this address.</inlineHelpText>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>