unpackaged/main/default/objects/FPC_Address__c/fields/First_Card_Date_as_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Card_Date_as_Owner__c</fullName>
    <description>This field will capture the date that the business owner began accepting credit cards.</description>
    <inlineHelpText>This field will capture the date that the business owner began accepting credit cards.</inlineHelpText>
    <label>First Card Date as Owner</label>
    <type>Date</type>
</CustomField>