unpackaged/main/default/objects/FPC_Address__c/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Contact</label>
    <referenceTo>Lead_Contact__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>