unpackaged/main/default/objects/FPC_Address__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <description>Type of Address Location</description>
    <inlineHelpText>Select what type of address location for this address</inlineHelpText>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical Address</fullName>
            </value>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
            <value>
                <fullName>Home Address</fullName>
            </value>
            <value>
                <fullName>Equipment Location</fullName>
            </value>
            <value>
                <fullName>Store Location</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>P.O. Box</fullName>
            </value>
            <value>
                <fullName>Shipping Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>