unpackaged/main/default/objects/FPC_Address__c/fields/MSA_Code__c.field-meta.xml
<CustomField>
    <fullName>MSA_Code__c</fullName>
    <description>Metropolitian Service Area Code: Mainly used as a marketing field.</description>
    <inlineHelpText>Metropolitian Service Area Code: Mainly used as a marketing field.</inlineHelpText>
    <label>MSA Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>