unpackaged/main/default/objects/FPC_Address__c/fields/NCCI_Sent__c.field-meta.xml
<CustomField>
    <fullName>NCCI_Sent__c</fullName>
    <description>Date that we sent NCCI out to address</description>
    <label>NCCI Sent</label>
    <type>Date</type>
</CustomField>