unpackaged/main/default/objects/FPC_Address__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>The phone number that corresponds to this address.</description>
    <inlineHelpText>Enter the phone number that corresponds to this address.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>