unpackaged/main/default/objects/FPC_Address__c/fields/Sent_For_Service__c.field-meta.xml
<CustomField>
    <fullName>Sent_For_Service__c</fullName>
    <description>Date that we gave the physical lawsuit documents to the process server (messenger) to serve to the customer</description>
    <label>Sent For Service</label>
    <type>Date</type>
</CustomField>