unpackaged/main/default/objects/FPC_Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State</description>
    <inlineHelpText>Enter 2 letter State designation in US</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>