unpackaged/main/default/objects/FPC_Address__c/fields/Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Name__c</fullName>
    <inlineHelpText>Without the street type, eg:
"Windmill Rd" should be just "Windmill"</inlineHelpText>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>