unpackaged/main/default/objects/FPC_Address__c/fields/Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Street_Type__c</fullName>
    <inlineHelpText>For simplicity, use full length values, such as Road or Street.</inlineHelpText>
    <label>Street Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>