unpackaged/main/default/objects/FPC_Address__c/fields/Vacant__c.field-meta.xml
<CustomField>
    <fullName>Vacant__c</fullName>
    <description>Picklist indicating whether the address is vacant</description>
    <label>Vacant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>