unpackaged/main/default/objects/FPC_Address__c/fields/Verification_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Verification_Mail_Sent__c</fullName>
    <description>Date that the confirmation document is sent to the customer to verify that this is a good address to send mail</description>
    <label>Verification Mail Sent</label>
    <type>Date</type>
</CustomField>