unpackaged/main/default/objects/FPC_Address__c/fields/Yrs_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Yrs_in_Business__c</fullName>
    <formula>FLOOR((TODAY()-  Date_Established__c )/365)</formula>
    <label>Yrs in Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>