unpackaged/main/default/objects/FPC_Address__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>ZipCode or Postal Code</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter US Zipcode xxxxx-xxxx or Intl Postal Code</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>