unpackaged/main/default/objects/FPC_Address__c/validationRules/Validate_State_Abbreviation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_State_Abbreviation</fullName>
    <active>true</active>
    <description>Validate 2 letter State abbreviation</description>
    <errorConditionFormula>AND(LEN( State__c ) &lt; 2,
NOT(
CONTAINS("AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:" &amp;
"IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:" &amp;
"NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:" &amp;
"WA:WV:WI:WY",  State__c )
))</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>A valid two-letter state abbreviation is required.</errorMessage>
</ValidationRule>