unpackaged/main/default/objects/FPC_Address__c/validationRules/ZipCode_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipCode_Format_Validation</fullName>
    <active>true</active>
    <description>Valid proper format for 5 or 9 digit US Zipcode</description>
    <errorConditionFormula>AND(NOT(REGEX(  Zip_Code__c  , "\\d{5}(-\\d{4})?")))</errorConditionFormula>
    <errorDisplayField>Zip_Code__c</errorDisplayField>
    <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
</ValidationRule>